# scallop

./: .parlance.json  CMakeLists.txt  Scallop.pro  animatedstackedwidget.cpp  branding.h  doingpartitioning.ui  driveinfo.cpp  driveinfo.h  erasedrivedialog.cpp  erasedrivedialog.h  erasedrivedialog.ui  installerproc.cpp  installerproc.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  partitionwindow.cpp  partitionwindow.h  partitionwindow.ui  reset.cpp  reset.h  reset.ui  scallop-onboarding.service  scallop-onboarding.system  scallop-reset.service  scallop.pro  systemonboarding.cpp  systemonboarding.h  systemonboarding.ui  vars.pri
boot-utilities/: CMakeLists.txt  boot-utilities.pro  languagepopover.cpp  languagepopover.h  languagepopover.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  powerpopover.cpp  powerpopover.h  powerpopover.ui  scallop-boot-utilities.desktop
boot-utilities/translations/: aa_ET.ts  ab_GE.ts  am_ET.ts  ar_DZ.ts  ar_KM.ts  ar_KW.ts  ar_LB.ts  ar_LY.ts  ar_MR.ts  ar_OM.ts  ar_PS.ts  ar_SA.ts  ar_SD.ts  ar_SO.ts  ar_TN.ts  as_IN.ts  az_AZ.ts  bg_BG.ts  bs_BA.ts  da.qm  da.ts  de_DE.qm  de_DE.ts  el_GR.ts  en_CA.ts  en_GB.qm  en_GB.ts  en_US.ts  es_AR.ts  es_BO.ts  es_CO.ts  es_ES.ts  es_PA.ts  es_SV.ts  es_VE.ts  et_EE.ts  fi_FI.ts  fr_CA.ts  fr_FR.ts  ha_NE.ts  (+49 more)
installer/: CMakeLists.txt  cactus-animation-resources.qrc  diskmodel.cpp  diskmodel.h  flowcontroller.cpp  flowcontroller.h  installer.pro  installerdata.cpp  installerdata.h  installipcmanager.cpp  installipcmanager.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
installer/cactus-install-animation/: cactusanimationstage.cpp  cactusanimationstage.h  cactusinstallanimationwindow.cpp  cactusinstallanimationwindow.h  cactusinstallanimationwindow.ui  parallaxobject.cpp  parallaxobject.h  sequencer.cpp  sequencer.h  textbox.cpp  textbox.h  zoomsvgrenderer.cpp  zoomsvgrenderer.h
installer/cactus-install-animation/sequencer/: animationelement.cpp  animationelement.h  functionelement.cpp  functionelement.h  loopelement.cpp  loopelement.h  oneshotelement.cpp  oneshotelement.h  parallelelement.cpp  parallelelement.h  pauseelement.cpp  pauseelement.h  randomelement.cpp  randomelement.h  sequencerelement.cpp  sequencerelement.h  sequentialelement.cpp  sequentialelement.h  soundelement.cpp  soundelement.h  textboxelement.cpp  textboxelement.h
installer/cactus-install-animation/stages/: animationstage1.cpp  animationstage2.cpp  animationstage3.cpp  animationstage4.cpp  animationstage5.cpp  animationstage6.cpp  animationstage7.cpp  animationstage8.cpp  animationstages.h
installer/install/: bootloaderstate.cpp  bootloaderstate.h  diskmanagementstate.cpp  diskmanagementstate.h  fstabstate.cpp  fstabstate.h  installmanager.cpp  installmanager.h  mountstate.cpp  mountstate.h  unsquashstate.cpp  unsquashstate.h
installer/pages/: advanceddiskpopover.cpp  advanceddiskpopover.h  advanceddiskpopover.ui  diskpage.cpp  diskpage.h  diskpage.ui  disktypepage.cpp  disktypepage.h  disktypepage.ui  encryptpage.cpp  encryptpage.h  encryptpage.ui  finishedpage.cpp  finishedpage.h  finishedpage.ui  issuespage.cpp  issuespage.h  issuespage.ui  networkpage.cpp  networkpage.h  networkpage.ui  progresspage.cpp  progresspage.h  progresspage.ui  readypage.cpp  readypage.h  readypage.ui  welcomepage.cpp  welcomepage.h  welcomepage.ui
installer/popovers/: encryptpopover.cpp  encryptpopover.h  encryptpopover.ui  eraseconfirmpopover.cpp  eraseconfirmpopover.h  eraseconfirmpopover.ui  mountpointpopover.cpp  mountpointpopover.h  mountpointpopover.ui  splitpopover.cpp  splitpopover.h  splitpopover.ui
installer/probe/: probemanager.cpp  probemanager.h
installer/systemd-boot-config/: loader.conf
installer/systemd-boot-config/entries/: cactus.conf
installer/translations/: aa_ET.ts  am_ET.ts  ar_DZ.ts  ar_KM.ts  ar_KW.ts  ar_LB.ts  ar_MR.ts  ar_OM.ts  ar_PS.ts  ar_SA.ts  ar_SD.ts  ar_SO.ts  ar_SY.ts  ar_TN.ts  as_IN.ts  az_AZ.ts  bg_BG.ts  bs_BA.ts  cr_CA.ts  da.qm  da.ts  de_DE.qm  de_DE.ts  en_CA.ts  en_GB.qm  en_GB.ts  en_US.ts  es_AR.ts  es_BO.ts  es_CO.ts  es_DO.ts  es_ES.ts  es_PA.ts  es_SV.ts  es_VE.ts  et_EE.ts  fi_FI.ts  fr_CA.ts  fr_FR.ts  ga_IE.ts  (+56 more)
libscallop/: CMakeLists.txt  issueswidget.cpp  issueswidget.h  issueswidget.ui  libscallop.pro  libscallop_resources.qrc  scalloplib.cpp  scalloplib.h
libscallop/translations/: en_US.ts
onboarding/: 50-scallop-onboarding.rules  CMakeLists.txt  defaults.conf  endsession.cpp  endsession.h  endsession.ui  lightdm-configuration.conf  main.cpp  mainwindow.cpp  mainwindow.ui  onboarding.pro  scallop-onboarding.desktop
onboarding-service/: CMakeLists.txt  main.cpp  onboarding-service.pro  scallop-onboarding-service.service
onboarding/OnboardingPages/: onboardingcompleteoobe.cpp  onboardingcompleteoobe.h  onboardingcompleteoobe.ui  onboardinghostname.cpp  onboardinghostname.h  onboardinghostname.ui  onboardingtimezone.cpp  onboardingtimezone.h  onboardingtimezone.ui
onboarding/translations/: aa_ET.ts  ar_DZ.ts  ar_KM.ts  ar_KW.ts  ar_LB.ts  ar_MR.ts  ar_OM.ts  ar_PS.ts  ar_SA.ts  ar_SD.ts  ar_SO.ts  ar_TN.ts  az_AZ.ts  bg_BG.ts  ca_AD.ts  da_DK.qm  da_DK.ts  de_DE.ts  en_CA.ts  en_GB.qm  en_GB.ts  es_AR.ts  es_BO.ts  es_CO.ts  es_ES.ts  es_PA.ts  es_SV.ts  es_VE.ts  et_EE.ts  fi_FI.ts  fr_FR.ts  ha_NE.ts  hi_IN.ts  hr_HR.ts  hu_HU.ts  hy_AM.ts  is_IS.ts  it_IT.ts  lb_LU.ts  lg_UG.ts  (+33 more)
reset/offline-reset/: CMakeLists.txt  main.cpp  offline-reset.pro  plymouth.cpp  plymouth.h
reset/offline-reset/systemd/: scallop-offline-reset.service
reset/scallop-reset-trigger/: CMakeLists.txt  com.vicr123.scallop.reset.policy  main.cpp  scallop-reset-trigger.pro
reset/scallop-reset-ui/: CMakeLists.txt  downloadprogress.cpp  downloadprogress.h  downloadprogress.ui  finalresetpopover.cpp  finalresetpopover.h  finalresetpopover.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  scallop-reset-ui.pro
reset/scallop-reset-ui/translations/: da.qm  da.ts  en_US.ts  vi.qm  vi.ts  (+1 more)
(+6 files in other folders)
